change default args

--- a/train_config.json
+++ b/train_config.json
@@ -18,8 +18,8 @@
 "tau":0.95,
 "normalize_adv":true,
 "positive_adv":false,
-"encoding":"rank",
-"obs_dim":14,
+"encoding":"graph_norm",
+"obs_dim":18,
 "action_dim":2,
 "unit_type":"layer_norm_lstm",
 "encoder_units":128,
